--- a/lab8/index.html
+++ b/lab8/index.html
@@ -81,12 +81,12 @@
          <div class="content-window" id="total">
             <div class="text">
                <p>
-                  У даній лабораторній роботі, ми придбали практичні навички роботи з потоками.
+                  У даній лабораторній роботі, ми придбали практичні навички роботи з потоками. Після написання коду та його запуску ми змогли порівняти час виконання при роботі коду в одному потоці та в кількох. У першому випадку ми отримали час
 
-               </p>
+ 1540 мілісекунди, у другому випадку - 400 мс. Як бачимо різниця суттєва. Також ми освоїли навики синхронізації потоків за допомогою м'ютексів та семафорів.          </p>
             </div>
          </div>
-         <div class="content-window" id="tab-1">
+         <div class="content-window" id="tab-1"> 
 
             <div class="text">
                <p> 
